[package]
name = "karatsuba-rs"
version = "0.1.0"
authors = ["immortal infidel <immortal.infidel@gmail.com>"]
edition = "2018"
license="MIT"
description="Karatsuba Implementation In Rust"
repository="https://github.com/immortalinfidel/karatsuba-rs"
homepage="https://github.com/immortalinfidel/karatsuba-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.3"
